# pylerplate

./: .gitignore  cookiecutter.json  pyproject.toml
docs/: README.md
hooks/: post_gen_project.sh
tests/: test_create_template.py
{{cookiecutter.project_name}}/: Dockerfile  Makefile  REAEDME.md  pyproject.toml
{{cookiecutter.project_name}}/docker/: Dockerfile
{{cookiecutter.project_name}}/logs/: my_app.log.2023-03-28
{{cookiecutter.project_name}}/src/: __init__.py  __main__.py  config.py  logger_provider.py
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: __main__.py  logger_provider.py  main.py  myawsc.py  person.py
{{cookiecutter.project_name}}/tests/: test_cli.py  test_setup.py
